feat(server): import dashboard tiles from homepage, homer and dashy
